--- a/app/views/follow_ups/index.html.erb
+++ b/app/views/follow_ups/index.html.erb
@@ -10,6 +10,7 @@
                       Choose a date(click) or a date range(click & drag) to create a follow up/todo
                     </small>]
               </div>
+              <% if false %>
               <div class="col-md-2">
                 <div class="form-group form-last pull-right">
                   <%= link_to "Sync my Events with Google Calendar",
@@ -18,6 +19,7 @@
                                data: { confirm: 'This can take a few moments, are you sure?' }} %>
                 </div>
               </div>
+              <% end %>
 </div>
 
 
