--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <!-- User index -->
 
 
-<div class="row row-top border-b">
+<div class="row row-top">
     <div class="col-md-10 users">
       <h3>Users</h3>
     </div>
@@ -14,7 +14,7 @@
 
 
 <div class="row well">
-<div class="col-md-12 data-table">
+<div class="col-md-12">
           <div class="row">        
             <div class="col-md-2">
               <div class="bold-subhead row-top"> Filter By </div>
@@ -47,7 +47,7 @@
 
 </div>
 </div>
-
+<div id="resource-container"></div>
 <script>
 actmm("users");
 </script>
