--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -5,82 +5,67 @@
     <div class="col-xs-10 emails">
       <h3>Emails</h3>
     </div>
-    <div class="col-xs-2">
-      <div class="form-group form-last pull-right">
-        <%= link_to "New Email", new_user_invitation_path,{class: "btn btn-primary"} %>
-      </div>
-    </div>
+
 </div>
 
 
 <div class="row">
-<div class="col-xs-12 data-table">
-<div class="well well-sm filter-well">
-                        <div class="row row-top" id="todo-filter" >
-                          <div class="col-xs-1">
-                            <h4>Filter</h4>
-                          </div>
-                          <div class="col-xs-11">
-                          <%= form_tag "/emails/filter",{method: "post", remote: true, class: 'form-inline'} do %>
-                            <div class="form-group">
-                            <div class="col-xs-2" >
-                                <%= select_tag :abdc,
-                                      options_for_select([["sent to","to"],
-                                                         ["sent by","by"]]),
-                                      {prompt: "-sent-",
-                                       id: "sent",
-                                       class: "form-control",
-                                       onchange: "$('#to,#by').hide();
-                                                  $('#' + this.value).show();
-                                                  $('select#sent_to,select#sent_by').val('');"} %>
-                              </div>
-                            </div>
-                          <div class="form-group">
-                            <div id="by" style="display:none;">
-                                <%= select_tag :sent_by,
-                                    options_for_select([["User","user"]]),
-                                    {prompt: "-who-",
-                                    class: "form-control",
-                                    onchange: "token(this.value,'email');"} %>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <div id="to" style="display:none;">
-                                <%= select_tag :sent_to,
-                                    options_for_select([["Enquiry","enquiry"],
-                                                         ["Registration","registration"],
-                                                         ["Institution","institution"],
-                                                         ["Person","person"]]),
-                                    {prompt: "-who-",
-                                     class: "form-control",
-                                     onchange: "token(this.value,'email');"} %>
-                            </div>
-                          </div>
-                          <%= link_to "date","#",{onclick: "$('#id_from_date,#id_to_date').toggle();"}  %>
-                          <div class="form-group">
-                            <div id="id_from_date" style="display:none;">
-                                <%= text_field_tag :from_date,nil,{class: "datepicker form-control",placeholder: "from date" }%>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <div id="id_to_date" style="display:none;">
-                                <%= text_field_tag :to_date,nil,{class: "datepicker form-control",placeholder: "to date" }%>
-                            </div>
-                          </div>
+<div class="col-xs-12">
+<div class="well">
+  <%= form_tag "/emails/filter",{method: "post", remote: true,class: "form-horizontal"} do %>
+  <div id="todo-filter" class="blue-well data-table">    
+        <div class="row">
+            <div class="col-xs-12"><h4 class="bold-subhead border-b">Filter By</h4></div>              
+                <div class="col-xs-3">          
+                  <%= select_tag :abdc,
+                        options_for_select([["sent to","to"],
+                                           ["sent by","by"]]),
+                        {prompt: "-sent-",
+                         id: "sent",
+                         class: "form-control vert-center",
+                         onchange: "$('#to,#by').hide();
+                                    $('#' + this.value).show();
+                                    $('select#sent_to,select#sent_by').val('');"} %>
+                </div>
+                <div class="col-xs-3" id="by" style="display:none;">
+                  <%= select_tag :sent_by,
+                      options_for_select([["User","user"]]),
+                      {prompt: "-who-",
+                      class: "form-control vert-center",
+                      onchange: "token(this.value,'email');"} %>                            
+                </div>
+                <div class="col-xs-3" id="to" style="display:none;">
+                  <%= select_tag :sent_to,
+                        options_for_select([["enquiry","enquiry"],
+                                             ["registration","registration"],
+                                             ["institution","institution"],
+                                             ["person","person"]]),
+                        {prompt: "-who-",
+                         class: "form-control vert-center",
+                         onchange: "token(this.value,'email');"} %>
+                </div>     
+                <div class="col-xs-4 filter_container"></div>
+        </div>
+        <div class="row">
+              <div class="col-xs-12"><h4 class="bold-subhead border-b">Date Range</h4></div>
+              <div class="col-xs-4">
+                <%= text_field_tag :from_date,nil,{class: "datepicker form-control vert-center",placeholder: "-from-" }%>
+              </div>
+              <div class="col-xs-4">
+                <%= text_field_tag :to_date,nil,{class: "datepicker form-control vert-center",placeholder: "-to-"}%>
+              </div>
+              <div class="col-xs-2">&nbsp;</div>
+              <div class="form-group col-xs-2">
+                <%= submit_tag "Filter",{class: 'btn btn-primary vert-center', onclick: "$('.emails > h3').append('<img class=temp src=/images/icons/sload.gif >');"} %>
+              </div>              
+        </div>
+  </div>
+  <% end %>
+  <div class="padAll10" id="emails-table">
+      <%= render 'table' %>
+  </div>
 
-                          <div class="col-xs-3 filter_container" ></div>
-                          <div class="form-group">
-                            <%= submit_tag "Search",{class: 'btn btn-primary', onclick: "$('.emails > h3').append('<img class=temp src=/images/icons/sload.gif >');"} %>
-                          </div>
-                          <% end %>
-                          </div>
-                        </div>
-                      </div>
-
-            <div id="emails-table">
-                <%= render 'table' %>
-            </div>
-
+</div>
 </div>
 </div>
 
@@ -89,3 +74,4 @@ actmm("emails");
 </script>
 
 
+<link rel="stylesheet" href="/css/jquery-ui-1.10.4.custom.css">
