--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-  </head>
-
+  </head> 
   
   <%= notifiably_audited('notify();').html_safe %>
 
@@ -26,16 +25,40 @@
   <% u = current_user %>  
     <div id="header">
       <div class="container">
-        <div class="col-xs-2">
+        <div class="col-xs-3">
           <h1 class="text-left">Organizor</h1>
         </div>
-        <div class="col-xs-3">
-          <br/>
+
+        <div class="col-xs-4">
+           <br/>
           <div class="row">
-            <input type=text class="form-control" placeholder="Search with name..."/>
+                <div class="input-group">
+                  <div class="input-group-btn">
+                    <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
+                      <span class="glyphicon glyphicon-search mar0"></span>
+                      <span id="typeahead-current">Reference No</span>
+                      <span class="caret"></span>
+                    </button>
+                    <ul id="typeahead-options" class="dropdown-menu" role="menu">
+                      <li><a href="#">Reference No</a></li>
+                      <li class="divider"></li>
+                      <li>
+                        <a href="#">Enquiries</a></li>
+                      <li><a href="#">Registrations</a></li>
+                      <li><a href="#">Institutions</a></li>
+                      <li><a href="#">People</a></li> 
+                    </ul>
+                  </div><!-- /btn-group -->
+                  <div class="clear"></div>
+                    <input class="typeahead form-control" type="text" placeholder="Search with name..">
+                  
+                  
+                </div><!-- /input-group -->
           </div>
         </div>
-        <div class="col-xs-4 text-right">
+
+
+        <div class="col-xs-2 text-right">
           <a href="#" id="create_new_cont" data-container="body" data-toggle="popover" data-placement="bottom">
             <span id="create_new" class="glyphicon glyphicon-plus-sign notification-icon no-link">
               <div id="create_new_content" class="hide">
@@ -123,50 +146,21 @@
               <a href="#"><span class="glyphicon glyphicon-th"></span>Dashboard</a>
             </li>
 
-            <li id="reports">
-              <%= link_to reports_path  do %><span class="glyphicon glyphicon-stats"></span>Reports<% end %>
-            </li>
-
-            <hr>
-
-            <li id="enquiries">
-              <%= link_to enquiries_path  do %><span class="glyphicon glyphicon-earphone"></span>Enquiries<% end %>
-            </li>
-            <li id="registrations">
-              <%= link_to registrations_path do %><span class="glyphicon glyphicon-pencil"></span>Registrations<% end %>
-            </li>
-
-            <li id="institutions">
-              <%= link_to institutions_path do %><span class="glyphicon glyphicon-home"></span>Institutions<% end %>
-            </li>
-
-            <li id="people">
-              <%= link_to people_path do %><span class="glyphicon glyphicon-globe"></span>People<% end %>
-            </li>
-
-            <hr>
-
-            <!-- not displaying accounts and contracts -->
-            <% if false %>
-            <li><a href="#"><span class="glyphicon glyphicon-book"></span>Accounts</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-euro"></span>Contracts</a></li>
+            <% [["reports","stats","<hr>"],["enquiries","earphone"],["registrations","pencil"],
+             ["institutions","home"],["people","globe","<hr>"],["emails","envelope"],
+             ["todos","check"],["follow_ups","calendar","<hr>"]].each do |menu| %>
+                <% if can? :read, menu[0].singularize.camelize.constantize %>
+                     <li id="<%= menu[0] %>">
+                      <%= link_to send(menu[0] + "_path") do %>
+                        <span class="glyphicon glyphicon-<%= menu[1] %>">
+                        </span>
+                          <%= menu[0].titleize %>
+                      <% end %>
+                     </li>
+                     <%= menu[2].html_safe if !menu[2].nil? %>                     
+                 <% end %>
             <% end %>
 
-            <li id="emails">
-                <%= link_to  emails_path do %><span class="glyphicon glyphicon-envelope"></span>Emails<% end %>
-            </li>
-
-            <li id="follow_ups">
-              <%= link_to "/follow_ups" do %><span class="glyphicon glyphicon-calendar"></span>Calendar<% end %>
-            </li>
-
-            <li id="todos">
-              <%= link_to todos_path do %><span class="glyphicon glyphicon-check"></span>Todos<% end %>
-            </li>
-
-            <hr>
-
-            
             <li id="users">
               <% if u.role?(:agency_administrator) %>
                   <%= link_to "/users" do %><span class="glyphicon glyphicon-user"></span>Users<% end %>
@@ -174,9 +168,12 @@
                 <%= link_to "/users/#{current_user.id}" do %><span class="glyphicon glyphicon-user"></span>My account<% end %>
               <% end %>
             </li>
-            <li id="configuration">
-                <%= link_to "/configuration" do %><span class="glyphicon glyphicon-list"></span>Configuration<% end %>
-            </li>        
+
+            <% if current_user.adm? %>
+              <li id="configuration">
+                  <%= link_to "/configuration" do %><span class="glyphicon glyphicon-list"></span>Configuration<% end %>
+              </li>        
+            <% end %>
 
           </ul>
         </div>
@@ -253,6 +250,10 @@
       <% if flash[:notice] %>
         bootbox.alert('<%= flash[:notice] %>');           
       <% end %>
+
+      typeaheads($('.typeahead'),"referenceno");
+      typeaheadChangeMode();
     </script>
   </body>
+      
 </html>
