--- a/app/views/resources/_menu.html.erb
+++ b/app/views/resources/_menu.html.erb
@@ -1,23 +1,89 @@
 <!-- All resources to configure -->
-<div class="col-md-3">
-  <ul class="nav nav-pills nav-stacked sub-menu">
-      <% [  :application_status,:contact_type,
+    <div class="row row-top">
+      <h3>Configuration</h3>
+    </div>  
+
+<!-- Single button -->
+<div class="form-group">
+
+    <div class="btn-group">
+      <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button">Enquiry<span class="caret"></span></button>
+      <ul role="menu" class="dropdown-menu">
+        <% [ :contact_type,:student_source,:enquiry_status].sort.each do |r| %>
+              <% if can? :read, r.to_s.camelize.constantize %>
+              <li>
+                 <%= link_to r.to_s.titleize.pluralize,"/" + r.to_s.pluralize %>
+              </li>
+              <% end %>
+        <% end %>      
+      </ul>
+    </div><!-- /btn-group -->
+    <div class="btn-group">
+      <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button">Registration <span class="caret"></span></button>
+      <ul role="menu" class="dropdown-menu">
+        <% [:application_status,
             :course_level,:course_subject,:doc_category,
-            :english_level,:enquiry_status,:event_type,
-            :exam_type,:qualification,:student_source,
-            :todo_topic,:institution_type,:institution_group,
-            :contract_doc_category,:person_type,:commission_status,
-            :allow_ip,:branch,:role,:smtp,:email_template,
-            :commission_claim_status,:progression_status,:processing_fee_type,
-            :processing_fee_status].sort.each do |r| %>
-      <% if can? :read, r.to_s.camelize.constantize %>
-      <li id='<%= r.to_s %>' >
-         <%= link_to r.to_s.titleize.pluralize,"/" + r.to_s.pluralize %>
-      </li>
-      <% end %>
-      <% end %>
-  </ul>
-</div>
+            :english_level,:exam_type,:qualification,:progression_status].sort.each do |r| %>
+              <% if can? :read, r.to_s.camelize.constantize %>
+              <li>
+                 <%= link_to r.to_s.titleize.pluralize,"/" + r.to_s.pluralize %>
+              </li>
+              <% end %>
+        <% end %> 
+      </ul>
+    </div><!-- /btn-group -->
+    <div class="btn-group">
+      <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button">Institution<span class="caret"></span></button>
+      <ul role="menu" class="dropdown-menu">
+        <% [:institution_type,:institution_group,
+            :contract_doc_category,:commission_claim_status,:processing_fee_type,
+            :processing_fee_status,:commission_status].sort.each do |r| %>
+              <% if can? :read, r.to_s.camelize.constantize %>
+              <li>
+                 <%= link_to r.to_s.titleize.pluralize,"/" + r.to_s.pluralize %>
+              </li>
+              <% end %>
+        <% end %> 
+      </ul>
+    </div><!-- /btn-group -->
+    <div class="btn-group">
+      <button data-toggle="dropdown" class="btn btn-warning dropdown-toggle" type="button">Actions <span class="caret"></span></button>
+      <ul role="menu" class="dropdown-menu">
+         <% [:event_type,:todo_topic,:smtp,:email_template,].sort.each do |r| %>
+              <% if can? :read, r.to_s.camelize.constantize %>
+              <li>
+                 <%= link_to r.to_s.titleize.pluralize,"/" + r.to_s.pluralize %>
+              </li>
+              <% end %>
+        <% end %> 
+      </ul>
+    </div><!-- /btn-group -->
+    <div class="btn-group">
+      <button data-toggle="dropdown" class="btn btn-default dropdown-toggle" type="button">Person<span class="caret"></span></button>
+      <ul role="menu" class="dropdown-menu">
+         <% [:person_type].sort.each do |r| %>
+              <% if can? :read, r.to_s.camelize.constantize %>
+              <li>
+                 <%= link_to r.to_s.titleize.pluralize,"/" + r.to_s.pluralize %>
+              </li>
+              <% end %>
+        <% end %> 
+      </ul>
+    </div><!-- /btn-group -->
+    <div class="btn-group">
+      <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button">User<span class="caret"></span></button>
+      <ul role="menu" class="dropdown-menu">
+         <% [:allow_ip,:branch,:role].sort.each do |r| %>
+              <% if can? :read, r.to_s.camelize.constantize %>
+              <li>
+                 <%= link_to r.to_s.titleize.pluralize,"/" + r.to_s.pluralize %>
+              </li>
+              <% end %>
+        <% end %> 
+      </ul>
+    </div><!-- /btn-group -->
+  </div>
 <script>
 actmm('configuration')
 </script>
+<hr>
