--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,20 +1,19 @@
 <!-- index page of resources -->
 
-<%= render 'menu' %>
 
 
-<div class="col-md-9">
-  <div class="config-content">
-    <div class="row row-top">
-      <h3>Configuration</h3>
-    </div>
+
+<div class="col-md-12">
+
+
     <div class="row">
-      <h4>Click on a resource to configure.</h4>
-    </div>
-       
-  </div>
-   
-<%= image_tag "/images/icons/cupboard.png",{size: "400x400", align: "middle", style: "padding-top: 50px;"} %>
+      <%= render 'menu' %>
+    </div> 	
+
+	<div class="well row text-center">
+	  <h4>Click on a resource to configure.</h4>   
+	  <%= image_tag "/images/icons/cupboard.png",{size: "400x400", style: "padding-top: 50px;"} %>
+	</div>  
 </div>
 
 
