fee to finance permissions

--- a/app/views/institutions/_actions.html.erb
+++ b/app/views/institutions/_actions.html.erb
@@ -1,7 +1,7 @@
 <!-- actions the tabs -->
 <% mains = {          contract:     ["Contract",:read],
                       people:     ["Person",:read], 
-                      finance: ["Fee",:read],
+                      finance: ["Finance",:read],
                       students: ["Student",:read]} %>
 <% if current_user.is_a?(User) %>                      
 <% actions = {email:     ["Email",:create],
