--- a/app/views/registrations/_actions.html.erb
+++ b/app/views/registrations/_actions.html.erb
@@ -1,7 +1,7 @@
 <!-- actions the tabs -->
  <% mains = {  application:     ["Programme",:read],
               document:     ["Document",:read], 
-                  finance: ["Fee",:read],
+                  finance: ["Finance",:read],
                   timeline: ["Registration",:read]} %>
  <% if current_user.is_a?(User) %>                      
     <% actions = {email:     ["Email",:create],
