--- a/app/views/users/invitations/new.html.erb
+++ b/app/views/users/invitations/new.html.erb
@@ -37,6 +37,14 @@
                                     id: "role_select",
                                     class: "form-control" } %>
                 </div>
+                <div class="col-xs-5">
+                    
+                    <%= select_tag "branch_id",
+                                   options_from_collection_for_select(Branch.order(:name), "id", "name"),
+                                   {prompt: "-branch-",
+                                    id: "branch_select",
+                                    class: "form-control" } %>
+                </div>
               </div>
               <div class="row">
                 <div class="col-xs-2">
