--- a/app/views/shared/_home_page.html.erb
+++ b/app/views/shared/_home_page.html.erb
@@ -69,7 +69,7 @@
             
             <ul id="login_tabs" class="nav nav-pills seperator">
               <li id="users" class="active"><a data-remote=true href="/home/users.js">Users</a></li>
-              <li id="registrations"><a data-remote=true href="/home/registrations">Students</a></li>
+              <li id="registrations"><a data-remote=true href="/home/registrations.js">Students</a></li>
               <li id="institutions"><a data-remote=true href="/home/institutions.js">Institutions</a></li>
             </ul>
           
