[css] for branch and user in assign to

--- a/app/views/shared/_core_listing.html.erb
+++ b/app/views/shared/_core_listing.html.erb
@@ -106,6 +106,9 @@
                                                     '#branch_user_id',
                                                     '/get_users/',
                                                     'first_name');"}) +
+                                                   '</div></div><div class="row"><div class="col-md-4 text-right">' +                          
+                                                   label_tag(:user,"User") +
+                                                   '</div><div class="col-md-3">' +
                           select_tag("branch_user_id",
                           options_for_select(''),
                           {prompt: "-user-",
