--- a/app/views/registrations/_document.html.erb
+++ b/app/views/registrations/_document.html.erb
@@ -65,7 +65,7 @@
 </div>
 <div class="well row">
         <h4 class="bold-subhead">New Upload</h4>
-        <%=  nested_form_for(a,html: {class: "form-horizontal"}) do |reg| %>
+        <%=  nested_form_for(a,html: {class: "form-horizontal", id: "file_upload"}) do |reg| %>
             
                 <%= reg.fields_for :documents,a.documents.build do |d| %>
                   <div class="row blue-well padAll10">
@@ -75,8 +75,7 @@
                         <%= d.link_to_remove('<span class="glyphicon mar0 glyphicon-remove"></span>'.html_safe, size: "30x30") %>
                       </div>
                     </div>
-                    <%= bs(d,"name","text_field",[nil,4],7,6) %>
-                    <%= bs(d,"path","file_field",[nil,4],7,6) %>
+
                     <%= bs(d,[:category_id,DocCategory.order(:name),
                           :id,
                           :name,
@@ -85,18 +84,47 @@
                           ["Doc Category",4],7,6) %>
                     <%= bs(d,[:doc_type,(doc_type - ["all"]),{},{}],
                           "select",
-                          ["Type",4],7,6) %>      
-                  </div>  
+                          ["Type",4],7,6) %>
+                    
+                  <div class="col-xs-6">
+                      <div class="form-group">
+                        <label for="registration_documents_attributes_0_path" class="control-label col-xs-4">Path</label>
+                        <div class="col-xs-7">
+                          <input type="file" name="registration[documents_attributes][0][path]" multiple="multiple" id="registration_documents_attributes_0_path" class="form-control">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                   <div class="clear"></div><br/>                                     
                  <% end %>
 
-        <div class="row"> 
-            <%= reg.link_to_add "Attach more document", :documents ,{:class => "btn-sm btn-default"} %>
+        <script id="template-upload" type="text/x-tmpl">
+        <div class="upload">
+          {%=o.name%}
+          <div class="progress"><div class="bar" style="width: 0%"></div></div>
         </div>
+        </script>
 
-        <div class="form-group row">
-          <%= reg.submit "Upload",{:class => "btn btn-primary"} %>
-        </div>
         <% end %> 
   </div>
 
+<script type="text/javascript">
+
+jQuery(function() {
+  $('#file_upload').fileupload({
+    dataType: "script",
+    add: function(e, data) {
+      data.context = $(tmpl("template-upload", data.files[0]));
+      $('#file_upload').append(data.context);
+      return data.submit();
+    },
+    progress: function(e, data) {
+      var progress;
+      if (data.context) {
+        progress = parseInt(data.loaded / data.total * 100, 10);
+        return data.context.find('.bar').css('width', progress + '%');
+      }
+    }
+  });
+});
+</script>
