--- a/app/views/registrations/_document.html.erb
+++ b/app/views/registrations/_document.html.erb
@@ -99,10 +99,13 @@
                  <% end %>
 
         <script id="template-upload" type="text/x-tmpl">
-        <div class="upload">
-          {%=o.name%}
-          <div class="progress"><div class="bar" style="width: 0%"></div></div>
-        </div>
+          <div class="upload">
+            {%=o.name%}
+            <div class="progress">
+              <div class="bar" style="width: 0%">
+              </div>
+            </div>
+          </div>
         </script>
 
         <% end %> 
