--- a/app/views/registrations/_document.html.erb
+++ b/app/views/registrations/_document.html.erb
@@ -100,7 +100,7 @@
 
         <script id="template-upload" type="text/x-tmpl">
           <div class="upload">
-            {%=o.name%}
+            <h5>{%=o.name%}</h5>
             <div class="progress">
               <div class="bar" style="width: 0%">
               </div>
