--- a/app/views/institutions/confirmations/show.html.erb
+++ b/app/views/institutions/confirmations/show.html.erb
@@ -1,15 +1,30 @@
 <h2>Account Activation</h2>
 
-<%= form_for resource, :as => resource_name, :url => update_institution_confirmation_path, :html => {:method => 'put'}, :id => 'activation-form' do |f| %>
+<%= form_for resource, :as => resource_name, :url => update_institution_confirmation_path, :html => {:method => 'put', class: "form-horizontal", :id => 'activation-form'} do |f| %>
   <%= devise_error_messages! %>
-  <fieldset>
-    <legend>Account Activation<% if resource.email %> for <%= resource.email %><% end %></legend>
-
-  <% if @requires_password %>
-      <p><%= f.label :password,'Choose a Password:' %> <%= f.password_field :password %></p>
-      <p><%= f.label :password_confirmation,'Password Confirmation:' %> <%= f.password_field :password_confirmation %></p>
-  <% end %>
-  <%= hidden_field_tag :confirmation_token,@confirmation_token %>
-  <p><%= f.submit "Activate", :id => "activate" %></p>
-  </fieldset>
+  <div class="container main">
+    <p>Account Activation
+      <% if resource.email %> for <%= resource.email %><% end %>
+    </p>
+    <% if @requires_password %>
+        <%= bs(f,"password","password_field",['password',4],6,6) %>
+        <%= bs(f,"password_confirmation","password_field",['password_confirmation',4],6,6) %>
+    <% end %>
+  </div>
+    <%= hidden_field_tag :confirmation_token,@confirmation_token %>
+    <%= f.submit "Activate", :id => "account-activate" %>
 <% end %>
+
+<script>
+  $('#account-activate').click(function(){
+    var password = $('#institution_password').val();
+    var password_confirmation = $('#institution_password_confirmation').val();
+    if ( password != null && password == password_confirmation) {
+      return true;
+    }    
+    else {
+      alert("Please provide exact password");
+     return false;
+    }
+  });
+</script>
