Moved a duplicate of registration basic to students

--- a/app/views/images/_buttons.html.erb
+++ b/app/views/images/_buttons.html.erb
@@ -1,13 +1,11 @@
-
-
 <small class="text-center ">
-        <small><%= link_to 'change',
+  <small>
+    <%= link_to 'change',
                            "/images/#{a.id}/edit?obj_id=#{a.id}&model=#{core}",                         
                            {remote: true } %>
-        <small class="grey-sm">|</small>
-        
-        <%= link_to 'view',
+    <small class="grey-sm">|</small>
+    <%= link_to 'view',
                     "/images/#{a.id}?obj_id=#{a.id}&model=#{core}",
                     {remote: true} %>
-         </small>
-         </small>
+  </small>
+</small>
