Changes in Student permissions

--- a/app/views/images/_disp.html.erb
+++ b/app/views/images/_disp.html.erb
@@ -1,6 +1,6 @@
 <!-- display core images -->
 <div id="upload-image"></div>
-<div class="rel abs-plus-box">
+<div class="rel abs-plus-box text-center">
         <%= image_tag((a.image? ? a.image_url : "/images/icons/user.png"),{width: "170"}) %>
         <%= render 'images/buttons', a: a, core: core,hide: true %>        
 </div>
