--- a/app/views/images/_buttons.html.erb
+++ b/app/views/images/_buttons.html.erb
@@ -1,11 +1,13 @@
-<small class="text-center ">
+<div>
   <small>
+  <% if can? :create, Registration %>
     <%= link_to 'change',
                            "/images/#{a.id}/edit?obj_id=#{a.id}&model=#{core}",                         
                            {remote: true } %>
     <small class="grey-sm">|</small>
+   <% end %> 
     <%= link_to 'view',
                     "/images/#{a.id}?obj_id=#{a.id}&model=#{core}",
                     {remote: true} %>
   </small>
-</small>
+</div>
