--- a/app/views/registrations/_document.html.erb
+++ b/app/views/registrations/_document.html.erb
@@ -1,6 +1,11 @@
 <!-- Documents for regs -->
 <% a = @obj %>
-<% doc_type = %w(all students universities reports) %>
+<% if can? :create, Registration %>
+  <% doc_type = %w(all students universities reports) %>
+<% else %>
+  <% doc_type = %w(all students universities) %>
+<%end%>
+
 <div class="row">
 <ul class="nav nav-tabs">
   <% doc_type.each do |t| %>
@@ -75,16 +80,24 @@
                         <%= d.link_to_remove('<span class="glyphicon mar0 glyphicon-remove"></span>'.html_safe, size: "30x30") %>
                       </div>
                     </div>
+                    
+                    <% if can? :create, Registration %>
+                      <%= bs(d,[:category_id,DocCategory.order(:name),
+                            :id,
+                            :name,
+                            {prompt: "-category-"},{}],
+                            "collection_select",
+                            ["Doc Category",4],7,6) %>
+                            
+                      <%= bs(d,[:doc_type,(doc_type - ["all"]),{},{}],
+                            "select",
+                            ["Type",4],7,6) %>
+                    <%end%>
 
-                    <%= bs(d,[:category_id,DocCategory.order(:name),
-                          :id,
-                          :name,
-                          {prompt: "-category-"},{}],
-                          "collection_select",
-                          ["Doc Category",4],7,6) %>
-                    <%= bs(d,[:doc_type,(doc_type - ["all"]),{},{}],
-                          "select",
-                          ["Type",4],7,6) %>
+
+
+
+
                     
                   <div class="col-xs-6">
                       <div class="form-group">
