change in javascript validation

--- a/app/views/institutions/confirmations/show.html.erb
+++ b/app/views/institutions/confirmations/show.html.erb
@@ -16,8 +16,8 @@
 <script>
   $('#account-activate').click(function(){
     var password = $('#institution_password').val();
-    var password_confirmation = $('#institution_password_confirmation').val();
-    if ( password != null && password == password_confirmation) {
+    var password_confirmation 2= $('#institution_password_confirmation').val();
+    if ( password != "" && password == password_confirmation) {
       return true;
     }    
     else {
