--- a/app/views/registrations/confirmations/show.html.erb
+++ b/app/views/registrations/confirmations/show.html.erb
@@ -17,7 +17,7 @@
   $('#account-activate').click(function(){
     var password = $('#registration_password').val();
     var password_confirmation = $('#registration_password_confirmation').val();
-    if ( password != null && password == password_confirmation) {
+    if ( password != "" && password == password_confirmation) {
       return true;
     }    
     else {
