--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -495,6 +495,14 @@ vertical-align: top;
   color: #fff;
 }
 
+.tab-reverse > li.active > a{
+  background-color: #eee;
+  color: #219285;
+  font-weight: bold;
+}
+
+
+
 .bor-b {
   
   border-bottom: 1px solid #dddddd;
