--- a/app/views/registrations/_actions.html.erb
+++ b/app/views/registrations/_actions.html.erb
@@ -1,6 +1,6 @@
 <!-- actions the tabs -->
- <% mains = {  application:     ["Programme",:read],
-              document:     ["Document",:read], 
+ <% mains = {  application:     ["Programme",:read, "s"],
+              document:     ["Document",:read, "s"], 
                   finance: ["Finance",:read],
                   timeline: ["Registration",:read]} %>
  <% if current_user.is_a?(User) %>                      
