--- a/app/views/shared/_core_listing.html.erb
+++ b/app/views/shared/_core_listing.html.erb
@@ -305,10 +305,11 @@
  $('.length-element').html('<form class="form-inline" role="form"><div class="form-group">' +
                            '<select class="form-control hor-first" onchange="tabLength(tab,this);">' +
                            '<option>10</option>' +
-                           '<option>20</option>' +
+                           '<option selected=true>20</option>' +
                            '<option>30</option>' +
                            '<option>40</option>' +
                            '<option>50</option>' +
+                           '<option>100</option>' +
                            '</select>'+
                            '<label for="id_column" class="label-right">rows per page</label>' +
                            '</div></form>');
