--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1741,8 +1741,8 @@ th {
 }
 
 .table > thead > tr > th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #dddddd;
+/*  vertical-align: bottom; 
+  border-bottom: 2px solid #dddddd;*/
 }
 
 .table > caption + thead > tr:first-child > th,
