--- a/app/assets/stylesheets/jqueryui-datepicker.css
+++ b/app/assets/stylesheets/jqueryui-datepicker.css
@@ -278,7 +278,7 @@
 }
 .ui-widget-header {
     border: 1px solid #dddddd;
-    background: #dddddd url(images/ui-bg_highlight-soft_50_dddddd_1x100.png) 50% 50% repeat-x;
+    background: #008cba url(images/ui-bg_highlight-soft_50_dddddd_1x100.png) 50% 50% repeat-x;
     color: #444444;
     font-weight: bold;
 }
@@ -288,18 +288,17 @@
 
 /* Interaction states
 ----------------------------------*/
-.ui-state-default,
-.ui-widget-content .ui-state-default,
-.ui-widget-header .ui-state-default {
+.ui-widget-content .ui-state-default
+{
     border: 1px solid #dddddd;
     background: #f6f6f6 url(images/ui-bg_highlight-soft_100_f6f6f6_1x100.png) 50% 50% repeat-x;
     font-weight: bold;
-    color: #0073ea;
+    color: #008cba;*/
 }
 .ui-state-default a,
 .ui-state-default a:link,
 .ui-state-default a:visited {
-    color: #0073ea;
+    color: #008cba;
     text-decoration: none;
 }
 .ui-state-hover,
@@ -309,7 +308,7 @@
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
     border: 1px solid #0073ea;
-    background: #0073ea url(images/ui-bg_highlight-soft_25_0073ea_1x100.png) 50% 50% repeat-x;
+    background: #008cba url(images/ui-bg_highlight-soft_25_0073ea_1x100.png) 50% 50% repeat-x;
     font-weight: bold;
     color: #ffffff;
 }
@@ -328,14 +327,14 @@
 .ui-widget-content .ui-state-active,
 .ui-widget-header .ui-state-active {
     border: 1px solid #dddddd;
-    background: #ffffff url(images/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x;
+    background: #008cba url(images/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x;
     font-weight: bold;
-    color: #ff0084;
+    color: #fff;
 }
 .ui-state-active a,
 .ui-state-active a:link,
 .ui-state-active a:visited {
-    color: #ff0084;
+    color: #204a87;
     text-decoration: none;
 }
 
@@ -410,6 +409,7 @@
 }
 .ui-state-default .ui-icon {
     background-image: url(images/ui-icons_666666_256x240.png);
+    display: inline-block;
 }
 .ui-state-hover .ui-icon,
 .ui-state-focus .ui-icon {
