--- a/app/views/registrations/_basic.html.erb
+++ b/app/views/registrations/_basic.html.erb
@@ -2,81 +2,83 @@
 <% a = @registration %>
 
 <div class="row border-b">
-  
+
   <div class="col-xs-3">
     <%= render 'images/disp', core: "registration", a: a %>
 
 
     <ul class="vlsdet-s" >
-        <h4 class="bold-subhead">Quick Info</h4>
-           <%= li1('ref_no','ref_no','span','small',a)%>
-           <%= li1('channel',a.channel,'span','small')%>
-           <%= li1('source',a.source,'span','small')%>
+      <h4 class="bold-subhead">Quick Info</h4>
+      <%= li1('ref_no','ref_no','span','small',a)%>
+      <%= li1('channel',a.channel,'span','small')%>
+      <%= li1('source',a.source,'span','small')%>
 
-           <%= li1('applications',a.quick_st,'span','small')%>
-           <% hsh = {emails: "by",follow_ups: "to",todos: "to",notes: "by"} %>
-           <% %w(emails follow_ups todos notes).each do |act| %>
-             <% out = meta(current_user.id,"registration",act,a,hsh[act.to_sym]) %>
-             <%= li1(act,out,'span','small')%>
-           <% end %>
+      <%= li1('applications',a.quick_st,'span','small')%>
+      <% hsh = {emails: "by",follow_ups: "to",todos: "to",notes: "by"} %>
+      <% %w(emails follow_ups todos notes).each do |act| %>
+        <% out = meta(current_user.id,"registration",act,a,hsh[act.to_sym]) %>
+        <%= li1(act,out,'span','small')%>
+      <% end %>
     </ul>
 
   </div>
   <div class="col-xs-5 row-top">
     <ul class="vlsdet pt-0 border-b">
-        <h4 class="row-top bold-subhead">Personal</h4>
-        <% %w(first_name surname date_of_birth gender).each do |v| %>
+      <h4 class="row-top bold-subhead">Personal</h4>
+      <% %w(first_name surname gender).each do |v| %>
         <%= li1(v,v,'span','small',a)%>
-        <% end %>
-        <%= li2('nationality',[:country_id,:select,Country,
-                  :nationality],a,nil,"span","strong")%>
-    </ul>
-    <ul class="vlsdet">
-        <h4 class="bold-subhead">Contact</h4>
-        <% %w(mobile1 mobile2 email alternate_email home_phone work_phone).each do |v| %>
-        <%= li1(v,v,'span','small',a)%>
-        <% end %>
-    </ul>
+      <% end %>
+      <%= li2('date_of_birth',{type: :date,column: :date_of_birth},a,nil,"span","strong")%>
+      <%= li2('nationality',[:country_id,:select,Country,
+                             :nationality],a,nil,"span","strong")%>
+
+  </ul>
+  <ul class="vlsdet">
+    <h4 class="bold-subhead">Contact</h4>
+    <% %w(mobile1 mobile2 email alternate_email home_phone work_phone).each do |v| %>
+      <%= li1(v,v,'span','small',a)%>
+    <% end %>
+  </ul>
   </div>
   <div class="col-xs-4">
     <div class="well well-sm form-last">
-        <h4 class="bold-subhead">History</h4>
-        <ul class="vlsdet-s pt-0">
-           <%= li1('registered_at',a.created_at.to_date,'span','small')%>
-           <%= li1('registered_by',a.cby,'span','small')%>
-           <%= li1('Modified At',a.updated_at.to_date,'span','small')%>
-           <%= li1('Modified By',a.uby,'span','small')%>
-           <% out = current_user.id == a.assigned_to ? [a.ato,1,'to me'] : a.ato %>
-           <%= li1('assigned to',out,'span','small')%>
-           <%= li1('assigned by',a.aby,'span','small')%>
-           <%= li1('assigned At',(a.assigned_at.to_date rescue nil),'span','small')%>
-        </ul>
+      <h4 class="bold-subhead">History</h4>
+      <ul class="vlsdet-s pt-0">
+        <%= li1('registered_at',a.created_at.to_date,'span','small')%>
+        <%= li1('registered_by',a.cby,'span','small')%>
+        <%= li1('Modified At',a.updated_at.to_date,'span','small')%>
+        <%= li1('Modified By',a.uby,'span','small')%>
+        <% out = current_user.id == a.assigned_to ? [a.ato,1,'to me'] : a.ato %>
+        <%= li1('assigned to',out,'span','small')%>
+        <%= li1('assigned by',a.aby,'span','small')%>
+        <%= li1('assigned At',(a.assigned_at.to_date rescue nil),'span','small')%>
+      </ul>
     </div>
   </div>
 </div>
 <div class="row row-top border-b">
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="bold-subhead">Address</h4>
-        <% [['address_line1','line1'],
-            ['address_line2','line2']].each do |v| %>
+      <h4 class="bold-subhead">Address</h4>
+      <% [['address_line1','line1'],
+          ['address_line2','line2']].each do |v| %>
           <%= li1(v[1],v[0],'span','small',a)%>
         <% end %>
         <%= li2('city',[:address_city,:select,City,
-                  :city],a,nil,"span","strong")%>
-        <%= li2('country',[:address_country_id,:select,Country,
-                  :country],a,nil,"span","strong")%>
-        <%= li1('post_code','address_post_code','span','small',a)%>
+                        :city],a,nil,"span","strong")%>
+                      <%= li2('country',[:address_country_id,:select,Country,
+                                         :country],a,nil,"span","strong")%>
+                                       <%= li1('post_code','address_post_code','span','small',a)%>
     </ul>
   </div>
 
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="bold-subhead">Passport & Visa</h4>
-        <% ['passport_number',
-            'passport_valid_till',
-            'visa_type',
-            'visa_valid_till'].each do |v| %>
+      <h4 class="bold-subhead">Passport & Visa</h4>
+      <% ['passport_number',
+          'passport_valid_till',
+          'visa_type',
+          'visa_valid_till'].each do |v| %>
           <%= li1(v,v,'span','small',a)%>
         <% end %>
     </ul>
@@ -86,31 +88,31 @@
 <div class="row row-top border-b">
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="bold-subhead">Educational Background</h4>
-        <%= li2('qualification',[:qualification_name,:select,Qualification,
-                  :qualification],a,nil,"span","strong")%>        
-        <% [['qua_subject','subject'],
-            ['qua_institution','institution'],
-            ['qua_grade','grade'],
-            ['qua_exam','exam'],
-            ['qua_score','score']].each do |v| %>
-          <%= li1(v[1],v[0],'span','small',a)%>
-        <% end %>
+      <h4 class="bold-subhead">Educational Background</h4>
+      <%= li2('qualification',[:qualification_name,:select,Qualification,
+                               :qualification],a,nil,"span","strong")%>        
+                             <% [['qua_subject','subject'],
+                                 ['qua_institution','institution'],
+                                 ['qua_grade','grade'],
+                                 ['qua_exam','exam'],
+                                 ['qua_score','score']].each do |v| %>
+                                 <%= li1(v[1],v[0],'span','small',a)%>
+                               <% end %>
     </ul>
   </div>
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="bold-subhead">English Language Proficiency</h4>
-        <% a.exams.each do |x| %>
+      <h4 class="bold-subhead">English Language Proficiency</h4>
+      <% a.exams.each do |x| %>
         <%= li2('english_level',[:english_level_name,:select,EnglishLevel,
-                  :english_level],a,nil,"span","strong")%>
-        <%= li2('exam_type',[:exam_type_name,:select,ExamType,
-                  :qualification],a,nil,"span","strong")%>
-        <% [['exam_score','score'],
-            ['exam_date','date']].each do |v| %>
-          <%= li1(v[1],v[0],'span','small',x)%>
-        <% end %>
-        <% end %>
+                                 :english_level],a,nil,"span","strong")%>
+                               <%= li2('exam_type',[:exam_type_name,:select,ExamType,
+                                                    :qualification],a,nil,"span","strong")%>
+                                                  <% [['exam_score','score'],
+                                                      ['exam_date','date']].each do |v| %>
+                                                      <%= li1(v[1],v[0],'span','small',x)%>
+                                                    <% end %>
+                                                  <% end %>
     </ul>
   </div>
 </div>
@@ -118,30 +120,30 @@
 <div class="row row-top border-b">
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="bold-subhead">Emergency Contact</h4>
-        <% [['emer_full_name','Full Name'],
-            ['emer_relationship','Relationship'],
-            ['emer_mobile','Mobile'],
-            ['emer_email','Email']].each do |v| %>
+      <h4 class="bold-subhead">Emergency Contact</h4>
+      <% [['emer_full_name','Full Name'],
+          ['emer_relationship','Relationship'],
+          ['emer_mobile','Mobile'],
+          ['emer_email','Email']].each do |v| %>
           <%= li1(v[1],v[0],'span','small',a)%>
         <% end %>
     </ul>
   </div>
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="bold-subhead">Flight Details</h4>
-        <% [['flight_no','flight_no'],
-            ['flight_arrival_date','arrival_date'],
-            ['flight_arrival_time','arrival_time'],
-            ['flight_airport','airport']].each do |v| %>
+      <h4 class="bold-subhead">Flight Details</h4>
+      <% [['flight_no','flight_no'],
+          ['flight_arrival_date','arrival_date'],
+          ['flight_arrival_time','arrival_time'],
+          ['flight_airport','airport']].each do |v| %>
           <%= li1(v[1],v[0],'span','small',a)%>
         <% end %>
     </ul>
   </div>
 </div>
-  <br/>
+<br/>
 <script>
-  $('.best_in_place').best_in_place();
+$('.best_in_place').best_in_place();
 </script>
 
 
